--- a/welcome/orgentai.html
+++ b/welcome/orgentai.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Welcome to orgent.ai -  </title>
+  <title>Welcome to orgent.ai</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="digigly">
-  <title>Cover Template · Bootstrap v5.3</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css">
+  <style>
+    .logo {
+      max-width: 100%;
+      height: auto;
+    }
+    .cover-heading {
+      font-size: 2rem; /* Adjust heading size for mobile */
+    }
+    .lead {
+      font-size: 1rem; /* Adjust lead text size for mobile */
+    }
+    .btn-lg {
+      padding: 10px 20px;
+      font-size: 1rem;
+    }
+    .footer-text {
+      text-align: center;
+      padding: 10px;
+      font-size: 0.9rem;
+    }
+    @media (min-width: 768px) {
+      .cover-heading {
+        font-size: 3rem;
+      }
+      .lead {
+        font-size: 1.25rem;
+      }
+    }
+  </style>
 </head>
 <body>
   <div class="site-wrapper">
