--- a/welcome/orgentai.html
+++ b/welcome/orgentai.html
@@ -46,7 +46,7 @@
         <div class="container">
           <div class="inner cover">
             <img class="logo" src="lg-orgentai@2x.png">
-            <h1 class="cover-heading">AI from POC to Production</h1>
+            <h1 class="cover-heading">Bespoke AI Agents for Enterprises from POC to Production</h1>
             <p class="lead">Helping $1M+ brands automate their sales, marketing, and customer service workflows using reliable AI agents. No more black boxes and prompt guessing.</p>
             <p class="lead">
               <a href="mailto:info@orgent.ai" class="btn btn-lg btn-default">Contact us &gt;</a>
